# point24

./: .gitignore  CMakeLists.txt  project.cmake
src/: Point24Solver.cpp  Point24Solver.h  main.cpp
